Fix gorm, swagger. Add infra components
