# docs/swagger.yaml
@@ -143,7 +143,7 @@ paths:
       parameters:
       - description: Bearer Token
         in: header
-        name: token
+        name: Authorization
         required: true
         type: string
       produces:
@@ -175,16 +175,21 @@ paths:
       summary: List of users
       tags:
       - User
-  /v1/r/users/:user:
+  /v1/r/users/{user}:
     get:
       consumes:
       - application/json
       - multipart/form-data
       - application/x-www-form-urlencoded
       parameters:
+      - description: "1"
+        in: path
+        name: user
+        required: true
+        type: string
       - description: Bearer Token
         in: header
-        name: token
+        name: Authorization
         required: true
         type: string
       produces:
